--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>auto.protocompilador</groupId>
     <artifactId>ProtoCompilador</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.2</version>
     <name>ProtoCompilador</name>
 
     <properties>
